@@ -1,5 +1,11 @@
 2008-08-22  Mirco Bauer <meebey@meebey.net> 
 
+	* Chats/ChatView.cs: Disabled console writelines.
+	
+	  Use Process.Start() if not compiled with UI_GNOME.
+
+2008-08-22  Mirco Bauer <meebey@meebey.net> 
+
 	* Frontend.cs: Implemtend ShowError(string) method.
 	* Preferences/ServerListView.cs: Handle InvalidOperationException.
 
